# StockMarketBot

./: CMakeLists.txt  Phrases.h  README.md  StringResource.cpp  StringResource.h  main.cpp  plot.py
database/: MyDatabase.cpp  MyDatabase.h  User.h
resource-manager/: StringResource.cpp
stock/: Order.h  Price.h  SP.h  Stock.h  StockMarket.cpp  StockMarket.h  Timer.h
view/: Controller.cpp  Controller.h  KeyboardFactory.cpp  KeyboardFactory.h
